# weii

./: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  weii.rst
misc/: com.github.skorokithakis.weii.metainfo.xml
weii/: cli.py
