[tool.poetry]
name = "pyweii"
version = "0.1.1"
description = "A utility to measure weight using the Wii Balance Board."
authors = ["Stavros Korokithakis <hi@stavros.io>"]
repository = "https://gitlab.com/stavros/weii"
homepage = "https://gitlab.com/stavros/weii"
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"
evdev = "^1.6.1"

[tool.poetry.scripts]
weii = "pyweii.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
