[project]
name = "weii"
version = "0.1.2"
description = "A utility to measure weight using the Wii Balance Board."
authors = [{ name = "Stavros Korokithakis", email = "hi@stavros.io" }]
repository = "https://gitlab.com/stavros/weii"
homepage = "https://gitlab.com/stavros/weii"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8,<4"

[project.scripts]
weii = "weii.cli:cli"

[tool.poetry]
name = "weii"
version = "0.1.2"
description = "A utility to measure weight using the Wii Balance Board."
authors = ["Stavros Korokithakis <hi@stavros.io>"]

[tool.poetry.dependencies]
evdev = "^1.6.1"

[tool.poetry.scripts]
weii = "weii.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
